fixed overflow of portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -155,6 +155,8 @@ body {
 
 #portfolioContents {
 	width: 100%;
+	height: 100vh;
+	overflow: auto;
 }
 
 article {
